Fixed an issue on iOS Webkit preventing the keyboard from closing when submitting
In message-box component, fixed an issue on iOS Safari that prevented the keyboard to be dismissed when the form is submit using the enter key.

--- a/src/app/components/message-box/message-box.component.scss
+++ b/src/app/components/message-box/message-box.component.scss
@@ -21,6 +21,8 @@
   padding-left: 10px;
   padding-right: 10px;
 
+  font-size: 16px;
+
   background-color: #cfcfcf;
   //border-color: inherit;
   border-style: none;
